update adsense code

--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -35,6 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -56,11 +57,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org9a40d48">사용법</a>
+<li><a href="#org8030563">사용법</a>
 <ul>
-<li><a href="#org4d81244">무제한 잠자기 방지</a></li>
-<li><a href="#org6b1dc18">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#org06728a6">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#org495f041">무제한 잠자기 방지</a></li>
+<li><a href="#orgf50e355">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#org5fc406f">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -71,13 +72,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org9a40d48" class="outline-2">
-<h2 id="org9a40d48">사용법</h2>
-<div class="outline-text-2" id="text-org9a40d48">
+<div id="outline-container-org8030563" class="outline-2">
+<h2 id="org8030563">사용법</h2>
+<div class="outline-text-2" id="text-org8030563">
 </div>
-<div id="outline-container-org4d81244" class="outline-3">
-<h3 id="org4d81244">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org4d81244">
+<div id="outline-container-org495f041" class="outline-3">
+<h3 id="org495f041">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org495f041">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -88,9 +89,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org6b1dc18" class="outline-3">
-<h3 id="org6b1dc18">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org6b1dc18">
+<div id="outline-container-orgf50e355" class="outline-3">
+<h3 id="orgf50e355">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-orgf50e355">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -101,9 +102,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org06728a6" class="outline-3">
-<h3 id="org06728a6">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org06728a6">
+<div id="outline-container-org5fc406f" class="outline-3">
+<h3 id="org5fc406f">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org5fc406f">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
