--- a/note/emacs-lisp.html
+++ b/note/emacs-lisp.html
@@ -35,6 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -56,19 +57,19 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org1d46fc4">개념 메모</a>
+<li><a href="#orge2eb27d">개념 메모</a>
 <ul>
-<li><a href="#org6e7fee6">샤프(Sharpsign)</a></li>
-<li><a href="#orgd12bbbd">단 따옴표(Single Quote)</a></li>
-<li><a href="#org4bd4d2d">샤프 단 따옴표(Sharpsign Single Quote)</a></li>
-<li><a href="#orga8036f2">apply vs funcall</a></li>
-<li><a href="#orgc4b0a9e">Character</a></li>
+<li><a href="#org0d1bdc5">샤프(Sharpsign)</a></li>
+<li><a href="#orgc1e06db">단 따옴표(Single Quote)</a></li>
+<li><a href="#orge5688e6">샤프 단 따옴표(Sharpsign Single Quote)</a></li>
+<li><a href="#org5114c8e">apply vs funcall</a></li>
+<li><a href="#org910109a">Character</a></li>
 </ul>
 </li>
-<li><a href="#org58003ad">에러 노트</a>
+<li><a href="#orgb92959d">에러 노트</a>
 <ul>
-<li><a href="#orgff14de1">commandp</a></li>
-<li><a href="#org7d521ff">안 쓰는 매개변수</a></li>
+<li><a href="#orgd21737d">commandp</a></li>
+<li><a href="#org27875ed">안 쓰는 매개변수</a></li>
 </ul>
 </li>
 </ul>
@@ -81,13 +82,13 @@ Lisp 언어를 의미한다.
 형태라서 Lisp이 아니라고 하기에도 좀 미묘하긴 하다.
 </p>
 
-<div id="outline-container-org1d46fc4" class="outline-2">
-<h2 id="org1d46fc4">개념 메모</h2>
-<div class="outline-text-2" id="text-org1d46fc4">
+<div id="outline-container-orge2eb27d" class="outline-2">
+<h2 id="orge2eb27d">개념 메모</h2>
+<div class="outline-text-2" id="text-orge2eb27d">
 </div>
-<div id="outline-container-org6e7fee6" class="outline-3">
-<h3 id="org6e7fee6">샤프(Sharpsign)</h3>
-<div class="outline-text-3" id="text-org6e7fee6">
+<div id="outline-container-org0d1bdc5" class="outline-3">
+<h3 id="org0d1bdc5">샤프(Sharpsign)</h3>
+<div class="outline-text-3" id="text-org0d1bdc5">
 <p>
 <code>#</code> (Sharpsign) 은 s-expressions 특수 문법이다.
 근데 뭔 소린지 하나도 모르겠다.
@@ -107,9 +108,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgd12bbbd" class="outline-3">
-<h3 id="orgd12bbbd">단 따옴표(Single Quote)</h3>
-<div class="outline-text-3" id="text-orgd12bbbd">
+<div id="outline-container-orgc1e06db" class="outline-3">
+<h3 id="orgc1e06db">단 따옴표(Single Quote)</h3>
+<div class="outline-text-3" id="text-orgc1e06db">
 <p>
 단 따옴표 <code>'</code> (혹은 quote 함수)는 식을 그대로 표현할 때 사용한다.
 예를 들어 <code>(1 2 3)</code> 이라는 리스트를 메시지로 출력하고 싶어서
@@ -150,9 +151,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org4bd4d2d" class="outline-3">
-<h3 id="org4bd4d2d">샤프 단 따옴표(Sharpsign Single Quote)</h3>
-<div class="outline-text-3" id="text-org4bd4d2d">
+<div id="outline-container-orge5688e6" class="outline-3">
+<h3 id="orge5688e6">샤프 단 따옴표(Sharpsign Single Quote)</h3>
+<div class="outline-text-3" id="text-orge5688e6">
 <p>
 <code>#'function-name</code> 의 의미는
 <code>(function function-name)</code> 을 줄여서 표기한 것이다.
@@ -174,9 +175,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orga8036f2" class="outline-3">
-<h3 id="orga8036f2">apply vs funcall</h3>
-<div class="outline-text-3" id="text-orga8036f2">
+<div id="outline-container-org5114c8e" class="outline-3">
+<h3 id="org5114c8e">apply vs funcall</h3>
+<div class="outline-text-3" id="text-org5114c8e">
 <p>
 위에서 본 <code>funcall</code> 과 비슷하게 <code>apply</code> 라는 것도 있다.
 사용 방법도 거의 동일하다.
@@ -210,9 +211,9 @@ Lisp 언어를 의미한다.
 </div>
 </div>
 </div>
-<div id="outline-container-orgc4b0a9e" class="outline-3">
-<h3 id="orgc4b0a9e">Character</h3>
-<div class="outline-text-3" id="text-orgc4b0a9e">
+<div id="outline-container-org910109a" class="outline-3">
+<h3 id="org910109a">Character</h3>
+<div class="outline-text-3" id="text-org910109a">
 <p>
 <a href="emacs.html">Emacs</a>에서 문자는 ASCII 번호로 표현된다.
 즉 숫자다.
@@ -229,13 +230,13 @@ A는 65이기 때문에 위 코드는 참을 반환한다.
 </div>
 </div>
 </div>
-<div id="outline-container-org58003ad" class="outline-2">
-<h2 id="org58003ad">에러 노트</h2>
-<div class="outline-text-2" id="text-org58003ad">
+<div id="outline-container-orgb92959d" class="outline-2">
+<h2 id="orgb92959d">에러 노트</h2>
+<div class="outline-text-2" id="text-orgb92959d">
 </div>
-<div id="outline-container-orgff14de1" class="outline-3">
-<h3 id="orgff14de1">commandp</h3>
-<div class="outline-text-3" id="text-orgff14de1">
+<div id="outline-container-orgd21737d" class="outline-3">
+<h3 id="orgd21737d">commandp</h3>
+<div class="outline-text-3" id="text-orgd21737d">
 <blockquote>
 <p>
 Wrong type argument: commandp, your-function
@@ -255,9 +256,9 @@ Wrong type argument: commandp, your-function
 </div>
 </div>
 </div>
-<div id="outline-container-org7d521ff" class="outline-3">
-<h3 id="org7d521ff">안 쓰는 매개변수</h3>
-<div class="outline-text-3" id="text-org7d521ff">
+<div id="outline-container-org27875ed" class="outline-3">
+<h3 id="org27875ed">안 쓰는 매개변수</h3>
+<div class="outline-text-3" id="text-org27875ed">
 <p>
 예를 들어 아래와 같은 코드에서
 </p>
