--- a/note/org-publish.html
+++ b/note/org-publish.html
@@ -35,6 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -56,7 +57,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgf76dce5">관련된 글들</a></li>
+<li><a href="#orgb358e28">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -73,9 +74,9 @@ org-publish는 <a href="emacs.html">Emacs</a>에서
 상세한 내용<a target="_blank" href="https://seorenn.tistory.com/63">https://seorenn.tistory.com/63</a> 글을 참고하자.
 </p>
 
-<div id="outline-container-orgf76dce5" class="outline-2">
-<h2 id="orgf76dce5">관련된 글들</h2>
-<div class="outline-text-2" id="text-orgf76dce5">
+<div id="outline-container-orgb358e28" class="outline-2">
+<h2 id="orgb358e28">관련된 글들</h2>
+<div class="outline-text-2" id="text-orgb358e28">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/manual/Publishing.html">🌏 org-publish 공식 매뉴얼</a></li>
 </ul>
