--- a/note/org-spreadsheet.html
+++ b/note/org-spreadsheet.html
@@ -35,6 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -56,7 +57,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga5a431b">관련된 글들</a></li>
+<li><a href="#orgd1032a8">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -70,9 +71,9 @@ gtag('config', 'UA-44534026-1');
 글을 참고하자.
 </p>
 
-<div id="outline-container-orga5a431b" class="outline-2">
-<h2 id="orga5a431b">관련된 글들</h2>
-<div class="outline-text-2" id="text-orga5a431b">
+<div id="outline-container-orgd1032a8" class="outline-2">
+<h2 id="orgd1032a8">관련된 글들</h2>
+<div class="outline-text-2" id="text-orgd1032a8">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html">🌏 Org as a spreadsheet system: a short introduction</a></li>
 </ul>
@@ -85,7 +86,7 @@ gtag('config', 'UA-44534026-1');
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <div class="article-link-date">
-2020년 4월 15일 수정</div>
+2020년 4월 16일 수정</div>
 </div>
 </div>
 </div>
