--- a/note/sh.html
+++ b/note/sh.html
@@ -35,6 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -56,27 +57,27 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org46f5cd5">소개</a></li>
-<li><a href="#org28515fb">스크립팅 노트</a>
+<li><a href="#orgcc61085">소개</a></li>
+<li><a href="#orga039ff8">스크립팅 노트</a>
 <ul>
-<li><a href="#orgfbd2303">실행 가능한 스크립트</a></li>
-<li><a href="#orgefac3e6">if</a></li>
-<li><a href="#org436d2bc">루프</a></li>
-<li><a href="#org7e550c7">조건식 오퍼레이터</a></li>
-<li><a href="#org7ecde81">디렉토리 존재 유무 체크</a></li>
-<li><a href="#orgda73194">파일 개수</a></li>
-<li><a href="#org0083710">와일드카드 인자 처리</a></li>
-<li><a href="#orgebd9b1e">에러가 나면 멈추게 하기</a></li>
-<li><a href="#org42282a9">에러 메시지 숨기기</a></li>
+<li><a href="#org7093376">실행 가능한 스크립트</a></li>
+<li><a href="#orgfee3f26">if</a></li>
+<li><a href="#org8f0b239">루프</a></li>
+<li><a href="#orga090fdc">조건식 오퍼레이터</a></li>
+<li><a href="#orgdc803f3">디렉토리 존재 유무 체크</a></li>
+<li><a href="#org15d0d6c">파일 개수</a></li>
+<li><a href="#orgf80e29e">와일드카드 인자 처리</a></li>
+<li><a href="#org087fca1">에러가 나면 멈추게 하기</a></li>
+<li><a href="#org82eb7ee">에러 메시지 숨기기</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org46f5cd5" class="outline-2">
-<h2 id="org46f5cd5">소개</h2>
-<div class="outline-text-2" id="text-org46f5cd5">
+<div id="outline-container-orgcc61085" class="outline-2">
+<h2 id="orgcc61085">소개</h2>
+<div class="outline-text-2" id="text-orgcc61085">
 <p>
 <code>sh</code> 는 Bourne Shell의 축약된 이름으로
 유닉스에서 가장 기본적으로 쓰이던 <a href="shell.html">셸</a> 이다.
@@ -85,16 +86,16 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org28515fb" class="outline-2">
-<h2 id="org28515fb">스크립팅 노트</h2>
-<div class="outline-text-2" id="text-org28515fb">
+<div id="outline-container-orga039ff8" class="outline-2">
+<h2 id="orga039ff8">스크립팅 노트</h2>
+<div class="outline-text-2" id="text-orga039ff8">
 <p>
 전반적인 기준 없이 그냥 메모 단위로 기록되는 팁이다.
 </p>
 </div>
-<div id="outline-container-orgfbd2303" class="outline-3">
-<h3 id="orgfbd2303">실행 가능한 스크립트</h3>
-<div class="outline-text-3" id="text-orgfbd2303">
+<div id="outline-container-org7093376" class="outline-3">
+<h3 id="org7093376">실행 가능한 스크립트</h3>
+<div class="outline-text-3" id="text-org7093376">
 <p>
 일반적으로 셸 스크립트를 만들면 셸을 통해서 실행하는 것이 보통이다.
 </p>
@@ -155,9 +156,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orgefac3e6" class="outline-3">
-<h3 id="orgefac3e6">if</h3>
-<div class="outline-text-3" id="text-orgefac3e6">
+<div id="outline-container-orgfee3f26" class="outline-3">
+<h3 id="orgfee3f26">if</h3>
+<div class="outline-text-3" id="text-orgfee3f26">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #51afef;">if</span> <span style="color: #51afef;">[</span> condition <span style="color: #51afef;">]</span>
 <span style="color: #51afef;">then</span>
@@ -196,9 +197,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org436d2bc" class="outline-3">
-<h3 id="org436d2bc">루프</h3>
-<div class="outline-text-3" id="text-org436d2bc">
+<div id="outline-container-org8f0b239" class="outline-3">
+<h3 id="org8f0b239">루프</h3>
+<div class="outline-text-3" id="text-org8f0b239">
 <p>
 <code>for</code> 문을 이용한 현대적인(?) 루프는 아래처럼 쓸 수 있다.
 </p>
@@ -215,9 +216,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org7e550c7" class="outline-3">
-<h3 id="org7e550c7">조건식 오퍼레이터</h3>
-<div class="outline-text-3" id="text-org7e550c7">
+<div id="outline-container-orga090fdc" class="outline-3">
+<h3 id="orga090fdc">조건식 오퍼레이터</h3>
+<div class="outline-text-3" id="text-orga090fdc">
 <ul class="org-ul">
 <li><code>=</code>, <code>!=</code> 문자열이 동일한지, 동일하지 않은지</li>
 <li><code>-eq</code>, <code>-ne</code>, <code>-gt</code>, <code>-ge</code>, <code>-lt</code>, <code>-le</code> 차례대로 equal, not equal, greater
@@ -232,9 +233,9 @@ than, greater than or equal, less than, less than or equal</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org7ecde81" class="outline-3">
-<h3 id="org7ecde81">디렉토리 존재 유무 체크</h3>
-<div class="outline-text-3" id="text-org7ecde81">
+<div id="outline-container-orgdc803f3" class="outline-3">
+<h3 id="orgdc803f3">디렉토리 존재 유무 체크</h3>
+<div class="outline-text-3" id="text-orgdc803f3">
 <p>
 위에서도 정리했지만 <code>-d</code> 플래그를 쓸 수 있다.
 </p>
@@ -249,9 +250,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-orgda73194" class="outline-3">
-<h3 id="orgda73194">파일 개수</h3>
-<div class="outline-text-3" id="text-orgda73194">
+<div id="outline-container-org15d0d6c" class="outline-3">
+<h3 id="org15d0d6c">파일 개수</h3>
+<div class="outline-text-3" id="text-org15d0d6c">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #dcaeea;">COUNT</span>=$<span style="color: #51afef;">(</span><span style="color: #ECBE7B;">ls</span> /foo/bar | wc -l<span style="color: #51afef;">)</span>
 </pre>
@@ -275,9 +276,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org0083710" class="outline-3">
-<h3 id="org0083710">와일드카드 인자 처리</h3>
-<div class="outline-text-3" id="text-org0083710">
+<div id="outline-container-orgf80e29e" class="outline-3">
+<h3 id="orgf80e29e">와일드카드 인자 처리</h3>
+<div class="outline-text-3" id="text-orgf80e29e">
 <p>
 셸 스크립트에 <code>*.ext</code> 같은 파일 이름 와일드카드를 넘겼을 때
 이를 나열하는 방법을 for 커맨드로 표현하면 이렇다.
@@ -295,9 +296,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-orgebd9b1e" class="outline-3">
-<h3 id="orgebd9b1e">에러가 나면 멈추게 하기</h3>
-<div class="outline-text-3" id="text-orgebd9b1e">
+<div id="outline-container-org087fca1" class="outline-3">
+<h3 id="org087fca1">에러가 나면 멈추게 하기</h3>
+<div class="outline-text-3" id="text-org087fca1">
 <p>
 셸 스크립트 상단에 아래 한 줄을 넣어두면 에러가 났을 때 스크립트가 멈춘다.
 </p>
@@ -307,9 +308,9 @@ than, greater than or equal, less than, less than or equal</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org42282a9" class="outline-3">
-<h3 id="org42282a9">에러 메시지 숨기기</h3>
-<div class="outline-text-3" id="text-org42282a9">
+<div id="outline-container-org82eb7ee" class="outline-3">
+<h3 id="org82eb7ee">에러 메시지 숨기기</h3>
+<div class="outline-text-3" id="text-org82eb7ee">
 <p>
 에러 메시지는 <code>stderr</code> (2) 파이프로 전달되니 이것을 지옥의 쓰레기통(?)에 던지면 된다.
 </p>
