--- a/note/spacemacs.html
+++ b/note/spacemacs.html
@@ -35,6 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -56,7 +57,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org482d640">관련된 글들</a></li>
+<li><a href="#org6884cf6">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -78,9 +79,9 @@ gtag('config', 'UA-44534026-1');
 여전히 좋은 설정 패키지라고 생각한다.
 </p>
 
-<div id="outline-container-org482d640" class="outline-2">
-<h2 id="org482d640">관련된 글들</h2>
-<div class="outline-text-2" id="text-org482d640">
+<div id="outline-container-org6884cf6" class="outline-2">
+<h2 id="org6884cf6">관련된 글들</h2>
+<div class="outline-text-2" id="text-org6884cf6">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.spacemacs.org/">스페이맥스 공식 홈페이지</a></li>
 <li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">🌏
