--- a/note/tmux.html
+++ b/note/tmux.html
@@ -35,6 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -56,20 +57,20 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orge2fbc29">사용법</a></li>
-<li><a href="#org4b2d9e9">설정 방법</a>
+<li><a href="#orgea1beae">사용법</a></li>
+<li><a href="#orga46d133">설정 방법</a>
 <ul>
-<li><a href="#org613429f">리더 키(Prefix) 변경하기</a></li>
+<li><a href="#orgfd0af54">리더 키(Prefix) 변경하기</a></li>
 </ul>
 </li>
-<li><a href="#orgc6cc945">단축키</a></li>
-<li><a href="#org8766dfe">기타 팁</a>
+<li><a href="#org77ffcc0">단축키</a></li>
+<li><a href="#orgc7eda0b">기타 팁</a>
 <ul>
-<li><a href="#org8cf723a">선택 영역 복사하기</a></li>
-<li><a href="#org4abcf92">종료하지 않고 설정 다시 읽어 들이기</a></li>
+<li><a href="#org71200be">선택 영역 복사하기</a></li>
+<li><a href="#org0068297">종료하지 않고 설정 다시 읽어 들이기</a></li>
 </ul>
 </li>
-<li><a href="#org547ccb2">관련된 글들</a></li>
+<li><a href="#orgc369ebb">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -83,9 +84,9 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 비슷하면서도 원조 격인 <code>screen</code> 이라는 도구에 영향을 많이 받은 것으로 보인다.
 </p>
 
-<div id="outline-container-orge2fbc29" class="outline-2">
-<h2 id="orge2fbc29">사용법</h2>
-<div class="outline-text-2" id="text-orge2fbc29">
+<div id="outline-container-orgea1beae" class="outline-2">
+<h2 id="orgea1beae">사용법</h2>
+<div class="outline-text-2" id="text-orgea1beae">
 <p>
 그냥 실행시키면 실행은 된다.
 </p>
@@ -111,16 +112,16 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 </div>
 </div>
 </div>
-<div id="outline-container-org4b2d9e9" class="outline-2">
-<h2 id="org4b2d9e9">설정 방법</h2>
-<div class="outline-text-2" id="text-org4b2d9e9">
+<div id="outline-container-orga46d133" class="outline-2">
+<h2 id="orga46d133">설정 방법</h2>
+<div class="outline-text-2" id="text-orga46d133">
 <p>
 <code>~/.tmux.conf</code> 파일에 원하는 설정을 기록할 수 있다.
 </p>
 </div>
-<div id="outline-container-org613429f" class="outline-3">
-<h3 id="org613429f">리더 키(Prefix) 변경하기</h3>
-<div class="outline-text-3" id="text-org613429f">
+<div id="outline-container-orgfd0af54" class="outline-3">
+<h3 id="orgfd0af54">리더 키(Prefix) 변경하기</h3>
+<div class="outline-text-3" id="text-orgfd0af54">
 <p>
 기본 리더키는 <code>^b</code> (Ctrl-B)로 설정되어 있다.
 이걸 바꾸려면, 예를 들어 리더 키를 <code>^\</code> 로 바꾸려면
@@ -150,9 +151,9 @@ set-option -g prefix2 C-']'
 </div>
 </div>
 </div>
-<div id="outline-container-orgc6cc945" class="outline-2">
-<h2 id="orgc6cc945">단축키</h2>
-<div class="outline-text-2" id="text-orgc6cc945">
+<div id="outline-container-org77ffcc0" class="outline-2">
+<h2 id="org77ffcc0">단축키</h2>
+<div class="outline-text-2" id="text-org77ffcc0">
 <p>
 아래에 언급하는 모든 단축키는 리더 키(Prefix)를 먼저 누른 후 눌러야 한다.
 참고로 리더 키는 앞서 언급한 대로
@@ -175,13 +176,13 @@ set-option -g prefix2 C-']'
 </dl>
 </div>
 </div>
-<div id="outline-container-org8766dfe" class="outline-2">
-<h2 id="org8766dfe">기타 팁</h2>
-<div class="outline-text-2" id="text-org8766dfe">
+<div id="outline-container-orgc7eda0b" class="outline-2">
+<h2 id="orgc7eda0b">기타 팁</h2>
+<div class="outline-text-2" id="text-orgc7eda0b">
 </div>
-<div id="outline-container-org8cf723a" class="outline-3">
-<h3 id="org8cf723a">선택 영역 복사하기</h3>
-<div class="outline-text-3" id="text-org8cf723a">
+<div id="outline-container-org71200be" class="outline-3">
+<h3 id="org71200be">선택 영역 복사하기</h3>
+<div class="outline-text-3" id="text-org71200be">
 <p>
 마우스로 드래그 해서 <code>^C</code> 혹은 Command-C 를 눌렀는데 복사가 안 된다면
 <code>^W</code> (Ctrl+W)를 눌러보자.
@@ -195,9 +196,9 @@ set-option -g prefix2 C-']'
 </p>
 </div>
 </div>
-<div id="outline-container-org4abcf92" class="outline-3">
-<h3 id="org4abcf92">종료하지 않고 설정 다시 읽어 들이기</h3>
-<div class="outline-text-3" id="text-org4abcf92">
+<div id="outline-container-org0068297" class="outline-3">
+<h3 id="org0068297">종료하지 않고 설정 다시 읽어 들이기</h3>
+<div class="outline-text-3" id="text-org0068297">
 <p>
 tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 리더 키(Prefix)를 누르고 아래 커맨드를 입력해 보자.
@@ -225,9 +226,9 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 </div>
 </div>
 </div>
-<div id="outline-container-org547ccb2" class="outline-2">
-<h2 id="org547ccb2">관련된 글들</h2>
-<div class="outline-text-2" id="text-org547ccb2">
+<div id="outline-container-orgc369ebb" class="outline-2">
+<h2 id="orgc369ebb">관련된 글들</h2>
+<div class="outline-text-2" id="text-orgc369ebb">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/gpakosz/.tmux">🇫🇷 Oh My Tmux! Pretty &amp; versatile tmux configuration</a>:
 잘 만들어진 설정을 공유하고 있으며 그대로 쓰기에도 괜찮고
@@ -242,7 +243,7 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <div class="article-link-date">
-2020년 4월 15일 수정</div>
+2020년 4월 16일 수정</div>
 </div>
 </div>
 </div>
