--- a/note/afplay.html
+++ b/note/afplay.html
@@ -35,6 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -56,7 +57,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgff034fc">사용법</a></li>
+<li><a href="#org222b711">사용법</a></li>
 </ul>
 </div>
 </div>
@@ -66,9 +67,9 @@ afplay는 Audio File Play의 약자로
 오디오 파일 플레이어 유틸리티다.
 </p>
 
-<div id="outline-container-orgff034fc" class="outline-2">
-<h2 id="orgff034fc">사용법</h2>
-<div class="outline-text-2" id="text-orgff034fc">
+<div id="outline-container-org222b711" class="outline-2">
+<h2 id="org222b711">사용법</h2>
+<div class="outline-text-2" id="text-org222b711">
 <div class="org-src-container">
 <pre class="src src-bash">afplay /foo/bar/audio.mp3
 </pre>
