--- a/note/find.html
+++ b/note/find.html
@@ -35,6 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -56,14 +57,14 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgf241c17">기본 사용법</a>
+<li><a href="#org8eba519">기본 사용법</a>
 <ul>
-<li><a href="#orge6cf2a1">현재 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#org80b21a0">특정 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#org80ce0c8">검색 패턴</a></li>
-<li><a href="#org5fcfa9e">대소문자 무시하기</a></li>
-<li><a href="#org28d5cc3">검색 종류 지정하기</a></li>
-<li><a href="#org0ab13f4">검색 내용으로 특정 처리하기(exec)</a></li>
+<li><a href="#org98b43c9">현재 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#org53e53dd">특정 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#org8f86923">검색 패턴</a></li>
+<li><a href="#orgaa0e2a6">대소문자 무시하기</a></li>
+<li><a href="#org96928c1">검색 종류 지정하기</a></li>
+<li><a href="#org99d46d4">검색 내용으로 특정 처리하기(exec)</a></li>
 </ul>
 </li>
 </ul>
@@ -74,13 +75,13 @@ gtag('config', 'UA-44534026-1');
 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-orgf241c17" class="outline-2">
-<h2 id="orgf241c17">기본 사용법</h2>
-<div class="outline-text-2" id="text-orgf241c17">
+<div id="outline-container-org8eba519" class="outline-2">
+<h2 id="org8eba519">기본 사용법</h2>
+<div class="outline-text-2" id="text-org8eba519">
 </div>
-<div id="outline-container-orge6cf2a1" class="outline-3">
-<h3 id="orge6cf2a1">현재 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-orge6cf2a1">
+<div id="outline-container-org98b43c9" class="outline-3">
+<h3 id="org98b43c9">현재 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-org98b43c9">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> . -name <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -92,9 +93,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org80b21a0" class="outline-3">
-<h3 id="org80b21a0">특정 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-org80b21a0">
+<div id="outline-container-org53e53dd" class="outline-3">
+<h3 id="org53e53dd">특정 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-org53e53dd">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> /foo/bar <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -104,9 +105,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org80ce0c8" class="outline-3">
-<h3 id="org80ce0c8">검색 패턴</h3>
-<div class="outline-text-3" id="text-org80ce0c8">
+<div id="outline-container-org8f86923" class="outline-3">
+<h3 id="org8f86923">검색 패턴</h3>
+<div class="outline-text-3" id="text-org8f86923">
 <p>
 찾을 패턴으로 와일드카드를 사용할 수도 있다.
 </p>
@@ -119,9 +120,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org5fcfa9e" class="outline-3">
-<h3 id="org5fcfa9e">대소문자 무시하기</h3>
-<div class="outline-text-3" id="text-org5fcfa9e">
+<div id="outline-container-orgaa0e2a6" class="outline-3">
+<h3 id="orgaa0e2a6">대소문자 무시하기</h3>
+<div class="outline-text-3" id="text-orgaa0e2a6">
 <p>
 기본적으로 이 도구는 대소문자를 가린다.
 만약 대소문자를 가리지 않으려면 <code>iname</code> 옵션을 사용할 수 있다.
@@ -132,9 +133,9 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org28d5cc3" class="outline-3">
-<h3 id="org28d5cc3">검색 종류 지정하기</h3>
-<div class="outline-text-3" id="text-org28d5cc3">
+<div id="outline-container-org96928c1" class="outline-3">
+<h3 id="org96928c1">검색 종류 지정하기</h3>
+<div class="outline-text-3" id="text-org96928c1">
 <p>
 만약 특정한 종류만 검색하고 싶다면 <code>type</code> 옵션을 사용할 수 있다.
 </p>
@@ -152,9 +153,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org0ab13f4" class="outline-3">
-<h3 id="org0ab13f4">검색 내용으로 특정 처리하기(exec)</h3>
-<div class="outline-text-3" id="text-org0ab13f4">
+<div id="outline-container-org99d46d4" class="outline-3">
+<h3 id="org99d46d4">검색 내용으로 특정 처리하기(exec)</h3>
+<div class="outline-text-3" id="text-org99d46d4">
 <p>
 <code>-exec</code> 옵션은 검색된 내용을 이용해 외부 도구를 실행시킬 수 있게 할 수 있다.
 </p>
