--- a/note/magit.html
+++ b/note/magit.html
@@ -35,6 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -56,15 +57,15 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgb26635d">magit-status</a></li>
-<li><a href="#orgbd5eb6e">Stage</a></li>
-<li><a href="#org0d51110">Commit</a></li>
-<li><a href="#org5c224ff">Log</a></li>
-<li><a href="#org9a7786d">Push</a></li>
-<li><a href="#org2122eec">Pull</a></li>
-<li><a href="#orgcabf268">Branch</a></li>
-<li><a href="#org16227a2">기타</a></li>
-<li><a href="#orgc9da3bb">관련된 글들</a></li>
+<li><a href="#org07ca8f1">magit-status</a></li>
+<li><a href="#orgc926117">Stage</a></li>
+<li><a href="#org63ff2be">Commit</a></li>
+<li><a href="#orgc7cd1e1">Log</a></li>
+<li><a href="#org4b80e3f">Push</a></li>
+<li><a href="#org064e01b">Pull</a></li>
+<li><a href="#org985a305">Branch</a></li>
+<li><a href="#orgec8a1a4">기타</a></li>
+<li><a href="#orgae15405">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -85,9 +86,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 <a href="spacemacs.html">Spacemacs</a>용으로 커스터마이징 된
 단축키를 위주로 정리한다.
 </p>
-<div id="outline-container-orgb26635d" class="outline-2">
-<h2 id="orgb26635d">magit-status</h2>
-<div class="outline-text-2" id="text-orgb26635d">
+<div id="outline-container-org07ca8f1" class="outline-2">
+<h2 id="org07ca8f1">magit-status</h2>
+<div class="outline-text-2" id="text-org07ca8f1">
 <p>
 현재 상태를 표시하는 UI를 띄운다.
 개인적으로 magit 을 시작하는 가장 좋은 방법으로 사용한다.
@@ -109,9 +110,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgbd5eb6e" class="outline-2">
-<h2 id="orgbd5eb6e">Stage</h2>
-<div class="outline-text-2" id="text-orgbd5eb6e">
+<div id="outline-container-orgc926117" class="outline-2">
+<h2 id="orgc926117">Stage</h2>
+<div class="outline-text-2" id="text-orgc926117">
 <p>
 수정된 파일을 선택하고 <code>s</code> 를 누르면 스테이지가 된다.
 각 수정 내역에서 <code>TAB</code> 을 누르면 간단한 diff를 볼 수 있는데
@@ -124,9 +125,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org0d51110" class="outline-2">
-<h2 id="org0d51110">Commit</h2>
-<div class="outline-text-2" id="text-org0d51110">
+<div id="outline-container-org63ff2be" class="outline-2">
+<h2 id="org63ff2be">Commit</h2>
+<div class="outline-text-2" id="text-org63ff2be">
 <p>
 <code>c c</code> 를 누르면 커밋 모드로 바뀐다.
 스테이지 된 파일들의 간략한 변경점을 볼 수 있으며
@@ -142,9 +143,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org5c224ff" class="outline-2">
-<h2 id="org5c224ff">Log</h2>
-<div class="outline-text-2" id="text-org5c224ff">
+<div id="outline-container-orgc7cd1e1" class="outline-2">
+<h2 id="orgc7cd1e1">Log</h2>
+<div class="outline-text-2" id="text-orgc7cd1e1">
 <p>
 <code>l l</code> 을 이용하면 로그를 볼 수 있다.
 </p>
@@ -154,25 +155,25 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org9a7786d" class="outline-2">
-<h2 id="org9a7786d">Push</h2>
-<div class="outline-text-2" id="text-org9a7786d">
+<div id="outline-container-org4b80e3f" class="outline-2">
+<h2 id="org4b80e3f">Push</h2>
+<div class="outline-text-2" id="text-org4b80e3f">
 <p>
 <code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시(push) 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org2122eec" class="outline-2">
-<h2 id="org2122eec">Pull</h2>
-<div class="outline-text-2" id="text-org2122eec">
+<div id="outline-container-org064e01b" class="outline-2">
+<h2 id="org064e01b">Pull</h2>
+<div class="outline-text-2" id="text-org064e01b">
 <p>
 <code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀(pull)이 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgcabf268" class="outline-2">
-<h2 id="orgcabf268">Branch</h2>
-<div class="outline-text-2" id="text-orgcabf268">
+<div id="outline-container-org985a305" class="outline-2">
+<h2 id="org985a305">Branch</h2>
+<div class="outline-text-2" id="text-org985a305">
 <dl class="org-dl">
 <dt><code>b c</code></dt><dd>브랜치 생성</dd>
 <dt><code>b b</code></dt><dd>브랜치 전환</dd>
@@ -180,18 +181,18 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </dl>
 </div>
 </div>
-<div id="outline-container-org16227a2" class="outline-2">
-<h2 id="org16227a2">기타</h2>
-<div class="outline-text-2" id="text-org16227a2">
+<div id="outline-container-orgec8a1a4" class="outline-2">
+<h2 id="orgec8a1a4">기타</h2>
+<div class="outline-text-2" id="text-orgec8a1a4">
 <ul class="org-ul">
 <li><code>magit-status</code> 에서 <code>$</code> 키를 누르면
 실제로 사용되는 커맨드 및 응답 등의 로그를 볼 수 있다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgc9da3bb" class="outline-2">
-<h2 id="orgc9da3bb">관련된 글들</h2>
-<div class="outline-text-2" id="text-orgc9da3bb">
+<div id="outline-container-orgae15405" class="outline-2">
+<h2 id="orgae15405">관련된 글들</h2>
+<div class="outline-text-2" id="text-orgae15405">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">🌏 Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
 <li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">🌏 Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
