--- a/note/macos.html
+++ b/note/macos.html
@@ -57,9 +57,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org3f6dc7d">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#org90ea63d">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org3ec3ccc">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org5d9df5b">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#org60ffb5f">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#org28e1bf8">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -84,17 +84,17 @@ macOS는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org3f6dc7d" class="outline-2">
-<h2 id="org3f6dc7d">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org3f6dc7d">
+<div id="outline-container-org5d9df5b" class="outline-2">
+<h2 id="org5d9df5b">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-org5d9df5b">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-org90ea63d" class="outline-2">
-<h2 id="org90ea63d">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-org90ea63d">
+<div id="outline-container-org60ffb5f" class="outline-2">
+<h2 id="org60ffb5f">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-org60ffb5f">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -114,9 +114,9 @@ macOS는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org3ec3ccc" class="outline-2">
-<h2 id="org3ec3ccc">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org3ec3ccc">
+<div id="outline-container-org28e1bf8" class="outline-2">
+<h2 id="org28e1bf8">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-org28e1bf8">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -136,6 +136,13 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 </section>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/homebrew.html">Homebrew</a></h2>
+<div class="article-link-date">
+2020년 4월 17일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
