so many changes

--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@ gtag('config', 'UA-44534026-1');
 <h1>❏ POST의 최신 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/post/humanlike-google.html">구글 서비스의 인간스러움(?)</a></h2>
+<div class="article-link-date">
+2020년 4월 17일 작성</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/post/weird-github-page.html">왜 GitHub Pages의 일부 글이 나타나지 않았을까?</a></h2>
 <div class="article-link-date">
 2020년 4월 14일 작성</div>
@@ -69,6 +76,34 @@ gtag('config', 'UA-44534026-1');
 </div>
 <div class="summary-container">
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
+<div class="article-link-date">
+2020년 4월 17일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
+<div class="article-link-date">
+2020년 4월 17일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
+<div class="article-link-date">
+2020년 4월 17일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/magit.html">Magit</a></h2>
+<div class="article-link-date">
+2020년 4월 17일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/homebrew.html">Homebrew</a></h2>
@@ -109,34 +144,6 @@ gtag('config', 'UA-44534026-1');
 <h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
 2020년 4월 16일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/magit.html">Magit</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-spreadsheet.html">Org 스프레드시트</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-publish.html">Org Publish</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/tmux.html">Tmux</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
 </div>
 </div>
 </div>
