--- a/note/magit.html
+++ b/note/magit.html
@@ -52,20 +52,21 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>Magit</h1>
-<div class="title-date">2020년 4월 15일 수정</div>
+<div class="title-date">2020년 4월 17일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org07ca8f1">magit-status</a></li>
-<li><a href="#orgc926117">Stage</a></li>
-<li><a href="#org63ff2be">Commit</a></li>
-<li><a href="#orgc7cd1e1">Log</a></li>
-<li><a href="#org4b80e3f">Push</a></li>
-<li><a href="#org064e01b">Pull</a></li>
-<li><a href="#org985a305">Branch</a></li>
-<li><a href="#orgec8a1a4">기타</a></li>
-<li><a href="#orgae15405">관련된 글들</a></li>
+<li><a href="#org9cae163">magit-status</a></li>
+<li><a href="#orgbfb5375">Stage</a></li>
+<li><a href="#org5b3ab57">Commit</a></li>
+<li><a href="#org89ca5dd">Log</a></li>
+<li><a href="#org3ffd52b">Push</a></li>
+<li><a href="#orgf1efa61">Pull</a></li>
+<li><a href="#org22f31d9">Branch</a></li>
+<li><a href="#org6db9805">Reset or Revert</a></li>
+<li><a href="#orgf0a60a2">기타</a></li>
+<li><a href="#org975b76a">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -86,9 +87,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 <a href="spacemacs.html">Spacemacs</a>용으로 커스터마이징 된
 단축키를 위주로 정리한다.
 </p>
-<div id="outline-container-org07ca8f1" class="outline-2">
-<h2 id="org07ca8f1">magit-status</h2>
-<div class="outline-text-2" id="text-org07ca8f1">
+<div id="outline-container-org9cae163" class="outline-2">
+<h2 id="org9cae163">magit-status</h2>
+<div class="outline-text-2" id="text-org9cae163">
 <p>
 현재 상태를 표시하는 UI를 띄운다.
 개인적으로 magit 을 시작하는 가장 좋은 방법으로 사용한다.
@@ -110,9 +111,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgc926117" class="outline-2">
-<h2 id="orgc926117">Stage</h2>
-<div class="outline-text-2" id="text-orgc926117">
+<div id="outline-container-orgbfb5375" class="outline-2">
+<h2 id="orgbfb5375">Stage</h2>
+<div class="outline-text-2" id="text-orgbfb5375">
 <p>
 수정된 파일을 선택하고 <code>s</code> 를 누르면 스테이지가 된다.
 각 수정 내역에서 <code>TAB</code> 을 누르면 간단한 diff를 볼 수 있는데
@@ -125,9 +126,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org63ff2be" class="outline-2">
-<h2 id="org63ff2be">Commit</h2>
-<div class="outline-text-2" id="text-org63ff2be">
+<div id="outline-container-org5b3ab57" class="outline-2">
+<h2 id="org5b3ab57">Commit</h2>
+<div class="outline-text-2" id="text-org5b3ab57">
 <p>
 <code>c c</code> 를 누르면 커밋 모드로 바뀐다.
 스테이지 된 파일들의 간략한 변경점을 볼 수 있으며
@@ -143,9 +144,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgc7cd1e1" class="outline-2">
-<h2 id="orgc7cd1e1">Log</h2>
-<div class="outline-text-2" id="text-orgc7cd1e1">
+<div id="outline-container-org89ca5dd" class="outline-2">
+<h2 id="org89ca5dd">Log</h2>
+<div class="outline-text-2" id="text-org89ca5dd">
 <p>
 <code>l l</code> 을 이용하면 로그를 볼 수 있다.
 </p>
@@ -155,25 +156,25 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org4b80e3f" class="outline-2">
-<h2 id="org4b80e3f">Push</h2>
-<div class="outline-text-2" id="text-org4b80e3f">
+<div id="outline-container-org3ffd52b" class="outline-2">
+<h2 id="org3ffd52b">Push</h2>
+<div class="outline-text-2" id="text-org3ffd52b">
 <p>
 <code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시(push) 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org064e01b" class="outline-2">
-<h2 id="org064e01b">Pull</h2>
-<div class="outline-text-2" id="text-org064e01b">
+<div id="outline-container-orgf1efa61" class="outline-2">
+<h2 id="orgf1efa61">Pull</h2>
+<div class="outline-text-2" id="text-orgf1efa61">
 <p>
 <code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀(pull)이 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org985a305" class="outline-2">
-<h2 id="org985a305">Branch</h2>
-<div class="outline-text-2" id="text-org985a305">
+<div id="outline-container-org22f31d9" class="outline-2">
+<h2 id="org22f31d9">Branch</h2>
+<div class="outline-text-2" id="text-org22f31d9">
 <dl class="org-dl">
 <dt><code>b c</code></dt><dd>브랜치 생성</dd>
 <dt><code>b b</code></dt><dd>브랜치 전환</dd>
@@ -181,18 +182,26 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </dl>
 </div>
 </div>
-<div id="outline-container-orgec8a1a4" class="outline-2">
-<h2 id="orgec8a1a4">기타</h2>
-<div class="outline-text-2" id="text-orgec8a1a4">
+<div id="outline-container-org6db9805" class="outline-2">
+<h2 id="org6db9805">Reset or Revert</h2>
+<div class="outline-text-2" id="text-org6db9805">
+<p>
+<code>x</code> :: 변경 사항을 날리고 원래대로(HEAD) 돌린다.
+</p>
+</div>
+</div>
+<div id="outline-container-orgf0a60a2" class="outline-2">
+<h2 id="orgf0a60a2">기타</h2>
+<div class="outline-text-2" id="text-orgf0a60a2">
 <ul class="org-ul">
 <li><code>magit-status</code> 에서 <code>$</code> 키를 누르면
 실제로 사용되는 커맨드 및 응답 등의 로그를 볼 수 있다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgae15405" class="outline-2">
-<h2 id="orgae15405">관련된 글들</h2>
-<div class="outline-text-2" id="text-orgae15405">
+<div id="outline-container-org975b76a" class="outline-2">
+<h2 id="org975b76a">관련된 글들</h2>
+<div class="outline-text-2" id="text-org975b76a">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">🌏 Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
 <li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">🌏 Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
