--- a/note/spacemacs.html
+++ b/note/spacemacs.html
@@ -57,7 +57,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org6884cf6">관련된 글들</a></li>
+<li><a href="#org186742b">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -79,9 +79,9 @@ gtag('config', 'UA-44534026-1');
 여전히 좋은 설정 패키지라고 생각한다.
 </p>
 
-<div id="outline-container-org6884cf6" class="outline-2">
-<h2 id="org6884cf6">관련된 글들</h2>
-<div class="outline-text-2" id="text-org6884cf6">
+<div id="outline-container-org186742b" class="outline-2">
+<h2 id="org186742b">관련된 글들</h2>
+<div class="outline-text-2" id="text-org186742b">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.spacemacs.org/">스페이맥스 공식 홈페이지</a></li>
 <li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">🌏
@@ -96,6 +96,13 @@ The (Subjective) Spacemacs Howto</a>:
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/magit.html">Magit</a></h2>
+<div class="article-link-date">
+2020년 4월 17일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <div class="article-link-date">
 2020년 4월 16일 수정</div>
@@ -106,13 +113,6 @@ The (Subjective) Spacemacs Howto</a>:
 <h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
 2020년 4월 16일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/magit.html">Magit</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
 </div>
 </div>
 </div>
